--- a/client/hello.yml
+++ b/client/hello.yml
@@ -1,12 +1,14 @@
-close_at:
 messages_attributes:
   - locale: ja
-    subject: サーバが停止します
+    subject: ユビレジ 2.14 をリリースしました
     body:
-      2012年３月１０かより１時間サーバを停止します。
-      利用者の皆様にはご迷惑をおかけしてしまい、もうしわけありません。
+      6月3日にバージョン2.14をリリースしました。
+      このリリースでは入力が完了した会計を、iPad間で同期する機能が追加されました。
+      iPadのApp Storeから無料でアップデートできます！
   - locale: en
-    subject: Server maintenance
+    subject: Ubiregi 2.14 is released!
     body:
-      asodifa;sodifjas;odifja;sodifjas;doifj
+      The lates version of Ubiregi iPad app, 2.14, is released June 3.
+      This new version shares all closed checkouts between iPad devices.
+      You can upgrade for free using iPad's App Store.
 
